--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ footer{text-align:center;color:var(--muted);padding:15px}
 </div>
 
 <div class="section">
-  <h3>📈 Month-wise Saving Trend</h3>
+  <h3>📈 Month-wise Savings Trend</h3>
   <table id="monthTable"></table>
   <canvas id="monthChart"></canvas>
 </div>
